# abp-photonics-website

./: BACKEND_INTEGRATION_GUIDE.md  README.md  RENDER-DEPLOYMENT-GUIDE.md  advanced-power-electronics.html  ai-driven-innovation.html  ai-llm-design.html  ald-products.html  aln.html  bioimaging.html  biomedical-division.html  biomedical-ml.html  biosensing.html  biotensor-agi-portal.html  biotensor-lab.html  biotensor.html  cerebro-logic-dashboard.html  cerebro-logic.html  clear-cache.html  clinical-intelligence.html  cryogenic-electronics.html  custom-design.html  cvd-products.html  cybersecurity-dashboard.html  cybersecurity.html  demo-comparison.html  demo.html  device-characterization.html  electronics-catalog.html  epitaxy-products.html  epitaxy-services.html  fpga-products.html  gan.html  geospatial-agriculture.html  geospatial-dashboard.html  geospatial-defense.html  geospatial-energy.html  geospatial-insurance.html  geospatial-maritime.html  geospatial-smartcities.html  geospatial.html  (+72 more)
assets/: aiAvatar.json
backend/: .env  README.md  package-lock.json  package.json  server.js
backend/data/: abp.db
backend/scripts/: generate-mock-data.js  init-database.js
backend/shared/: database.js
backend/websocket/: biotensor.ws.js  cybersecurity.ws.js
bio-tensor-lab/: README.md  docker-compose.yml  package.json  turbo.json
biotensor-agi/: README.md
biotensor-agi/demo/: clinician_copilot.py
biotensor-agi/docs/: architecture.md
biotensor-lab/: .gitignore  README.md  package.json
components/: HeroSlider.tsx  SlideContent.tsx
components/ai-assistant/: AIAvatar.tsx  AssessmentWizard.tsx  PDFGenerator.tsx  PatentAnalysisAI.tsx  RecommendationPanel.tsx  VoiceInterface.tsx  index.tsx
components/patent-ai/: PatentAnalysisAI.tsx  PatentClassifier.ts  PatentClassifier.tsx  (+4 more)
js/: api-client-production.js  api-client.js  cybersecurity-dashboard-integration.js  patent-search-integration.js
lib/: openaiClient.ts  patentAnalysis.ts
medimetrics/: .env.example  README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
medimetrics-enterprise/: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT_READY.md  Dockerfile.api  Dockerfile.render  IMPLEMENTATION-SUMMARY.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  SECURITY.md  docker-compose.production.yml  docker-compose.yml  jest.config.js  medimetrics-additional.md  medimetrics-fixes.md  package.json  pnpm-workspace.yaml  turbo.json
medimetrics-enterprise/apps/inference/: Dockerfile  pyproject.toml
medimetrics-enterprise/apps/inference/src/server/: main.py
medimetrics-enterprise/training/: Makefile  pyproject.toml
public/: index.html
src/: App.jsx  index.jsx
store/: patentStore.ts  securityStore.ts
styles/: hero-slider.css
(+150 files in other folders)
