[tool.poetry]
name = "medimetrics-training"
version = "2.0.0"
description = "MediMetrics Model Training Infrastructure"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.2"
torchvision = "^0.16.2"
pytorch-lightning = "^2.1.3"
monai = "^1.3.0"
torchmetrics = "^1.2.1"
timm = "^0.9.12"
opencv-python = "^4.9.0"
pydicom = "^2.4.4"
SimpleITK = "^2.3.1"
albumentations = "^1.3.1"
scikit-learn = "^1.3.2"
pandas = "^2.1.4"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
mlflow = "^2.9.2"
optuna = "^3.5.0"
wandb = "^0.16.2"
tensorboard = "^2.15.1"
onnx = "^1.15.0"
onnxruntime = "^1.16.3"
tritonclient = "^2.40.0"
boto3 = "^1.34.14"
pyyaml = "^6.0.1"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
rich = "^13.7.0"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
black = "^23.12.1"
ruff = "^0.1.11"
jupyter = "^1.0.0"
ipywidgets = "^8.1.1"