[tool.poetry]
name = "medimetrics-inference"
version = "2.0.0"
description = "Medical Image AI Inference Service"
authors = ["MediMetrics Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
torch = "^2.1.2"
torchvision = "^0.16.2"
monai = "^1.3.0"
opencv-python = "^4.9.0"
pydicom = "^2.4.4"
SimpleITK = "^2.3.1"
numpy = "^1.26.3"
pillow = "^10.2.0"
scikit-image = "^0.22.0"
matplotlib = "^3.8.2"
redis = "^5.0.1"
rq = "^1.15.1"
boto3 = "^1.34.14"
httpx = "^0.26.0"
prometheus-client = "^0.19.0"
structlog = "^24.1.0"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
grad-cam = "^1.5.0"
onnx = "^1.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^23.12.1"
ruff = "^0.1.11"
mypy = "^1.8.0"
ipdb = "^0.13.13"
ipython = "^8.19.0"

[tool.poetry.extras]
gpu = ["onnxruntime-gpu"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing"